<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/EditTxtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="10sp"
            android:ems="5"
            android:inputType="textPersonName"
            android:text="@string/name"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="textPassword"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="10sp"
            tools:ignore="MissingConstraints" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/BtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="5sp"/>
            <Button
                android:id="@+id/BtnEnterReg"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:text="@string/enter" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>